tests/ui/error-messages/unexpected_assoc_type.ko
//@ compile-fail
//@ error-code: E0234
module unexpected_assoc_type {
    meta { purpose: "E0234: impl block provides associated type not declared in trait" }

    trait Adder {
        fn add(self, other: Int) -> Int
    }

    struct Counter {
        value: Int
    }

    impl Adder for Counter {  //~ ERROR E0234
        type Output = Int
        fn add(self, other: Int) -> Int {
            return self.value + other
        }
    }

    fn main() {
        let c: Counter = Counter { value: 10 }
    }
}
